--- a/menu.html
+++ b/menu.html
@@ -66,14 +66,14 @@
                             <div id="size">
                                 <label for="size">Select size</label>
                                 <select class="sizes" id="size">
-                                    <option label="Large -1500" value="1500"></option>
-                                    <option label="Medium - 1000" value="1000"></option>
                                     <option label="Small - 500" value="500"></option>
+                                    <option label="Medium - 1000" value="1000"></option>
+                                    <option label="Large -1500" value="1500"></option>
                                 </select>
                             </div>
                             <div id="crust">
-                                <label for="pizzaCrust">Slecet crust</label>
-                                <select class="crust" id="pizzaCrust">
+                                <label for="crust">Select crust</label>
+                                <select class="crusts" id="crust">
                                     <option label="Chicago - 700" value="700"></option>
                                     <option label="Neopoletan - 600" value="600"></option>
                                     <option label="Deep-fish - 500" value="500"></option>
