Linking styles.css, bootstrap and javascript

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Pizza-Peddler</title>
 </head>
 <body>
-    <div class="container-fluid" id="home-bg">
+    <!-- <div class="container-fluid" id="home-bg">
         <br>        
         <div class="container">
             <div class="logo">
@@ -33,14 +33,6 @@
                 <a href="menu.html">ORDER</a>
             </div>
         </div>
-    </div>   
-    <!-- <footer>
-        <h4>Get in touch with us</h4>
-        <a href="#"><img src="./Images/facebook.png"></img></a>
-        <a href="#"><img src="./Images/twitter.png"></img></a>
-        <a href="#"><img src="./Images/you_tube.png"></img></a>
-        <h5>Pizza-Peddler</h5>
-        <h5>2020</h5>
-    </footer>  -->
+    </div> -->
 </body>
 </html>
