Adding a container fluid class and giving it an id of home-bg

--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.js"
-    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-    crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
     <title>Pizza-Peddler</title>
 </head>
 <body>
-    <!-- <div class="container-fluid" id="home-bg">
+    <div class="container-fluid" id="home-bg">
         <br>        
-        <div class="container">
+        <!-- <div class="container">
             <div class="logo">
                 <img src="./Images/pizza logo.png">
             </div>
@@ -32,7 +28,7 @@
             <div class="welcome-text">
                 <a href="menu.html">ORDER</a>
             </div>
-        </div>
-    </div> -->
+        </div> -->
+    </div>
 </body>
 </html>
