--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container-fluid" id="home-bg">
         <br>        
-        <!-- <div class="container">
-            <div class="logo">
+        <div class="container">
+            <!-- <div class="logo">
                 <img src="./Images/pizza logo.png">
             </div>
             <header>   
@@ -27,8 +27,8 @@
 
             <div class="welcome-text">
                 <a href="menu.html">ORDER</a>
-            </div>
-        </div> -->
+            </div> -->
+        </div>
     </div>
 </body>
 </html>
