--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="container-fluid" id="home-bg">
         <br>        
         <div class="container">
-            <!-- <div class="logo">
+            <div class="logo">
                 <img src="./Images/pizza logo.png">
             </div>
-            <header>   
+            <!-- <header>   
                 <div class="topnav">
                     <a href="#">Home</a>
                     <a href="menu.html">Menu</a>
