Adding a header with a navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="logo">
                 <img src="./Images/pizza logo.png">
             </div>
-            <!-- <header>   
+            <header>   
                 <div class="topnav">
                     <a href="#">Home</a>
                     <a href="menu.html">Menu</a>
@@ -25,7 +25,7 @@
                 </div>
             </header>
 
-            <div class="welcome-text">
+            <!-- <div class="welcome-text">
                 <a href="menu.html">ORDER</a>
             </div> -->
         </div>
