Adding a div with a welcome-text class

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 </div>
             </header>
 
-            <!-- <div class="welcome-text">
+            <div class="welcome-text">
                 <a href="menu.html">ORDER</a>
-            </div> -->
+            </div>
         </div>
     </div>
 </body>
