Adding a div class of row

--- a/menu.html
+++ b/menu.html
@@ -22,42 +22,38 @@
                     <a href="#">Contact</a>
                 </div>
             </header>
-            <!-- <br>
             <div class="row">
-                <div class="col-md-4">
-                    <div id="aboutUs">
-                        <h3>PIZZA PEDDLERS</h3>
-                        <p>we serve your craving the best piece of it all. With us all time is rush hour.</p>
-                    </div>
-                </div>
-                <div class="col-md-4" id="">
-                    <div class="placeOrder">
+                <!-- <div class="col-md-4">
+                    <div class="order">
                         <form>
                             <div id="size">
-                                <label for="size">Select size</label>
+                                <label for="pizzaSize">Select size</label>
                                 <select id="pizzaSize">
-                                    <option label="Small - 500" value="500"></option>
-                                    <option label="Medium - 1000" value="1000"></option>
-                                    <option label="Large -1500" value="1500"></option>
+                                    <option label="Large -1700" value="1700"></option>
+                                    <option label="Medium - 1200" value="1200"></option>
+                                    <option label="Small - 850" value="850"></option>
                                 </select>
                             </div>
                             <div id="crust">
-                                <label for="crust">Select crust</label>
+                                <label for="pizzaCrust">Slecet crust</label>
                                 <select id="pizzaCrust">
-                                    <option label="Chicago - 700" value="700"></option>
-                                    <option label="Neopoletan - 600" value="600"></option>
-                                    <option label="Deep-fish - 500" value="500"></option>
+                                    <option label="Chicken - 900" value="900"></option>
+                                    <option label="Beef - 800" value="800"></option>
+                                    <option label="Deep-fish - 700" value="700"></option>
+                                    <option label="Mushroom - 600" value="600"></option>
+                                    <option label="Vegetables - 500" value="500"></option>
                                 </select>
                             </div>
                             <div id="toppings">
                                 <label for="pizzaTopping">Select toppings</label>
                                 <select id="pizzaToppings">
+                                    <option label="Tomatoes" value="100"></option>
                                     <option label="Pepperoni" value="80"></option>
                                     <option label="Onions" value="60"></option>
                                     <option label="Sausages" value="40"></option>
                                 </select>
                             </div>
-                            <div id="quantity">
+                            <div id="amnt">
                                 <label for="quantity">Quantity</label>
                                 <input id="quantity" type="number" value="1">
                             </div>
