Adding a div class of col-md-4

--- a/menu.html
+++ b/menu.html
@@ -23,8 +23,8 @@
                 </div>
             </header>
             <div class="row">
-                <!-- <div class="col-md-4">
-                    <div class="order">
+                <div class="col-md-4">
+                    <!-- <div class="order">
                         <form>
                             <div id="size">
                                 <label for="pizzaSize">Select size</label>
@@ -61,8 +61,8 @@
                                 <button type="button" id="button" onclick="placeOrder()" label="">ORDER</button>
                             </div>    
                         </form>
-                    </div>
-                </div> -->
+                    </div> -->
+                </div>
         </div>
     </div>
     <script src="./js/main.js"></script>
