--- a/menu.html
+++ b/menu.html
@@ -24,8 +24,8 @@
             </header>
             <div class="row">
                 <div class="col-md-4">
-                    <!-- <div class="order">
-                        <form>
+                    <div class="order">
+                        <!-- <form>
                             <div id="size">
                                 <label for="pizzaSize">Select size</label>
                                 <select id="pizzaSize">
@@ -60,8 +60,8 @@
                             <div>
                                 <button type="button" id="button" onclick="placeOrder()" label="">ORDER</button>
                             </div>    
-                        </form>
-                    </div> -->
+                        </form> -->
+                    </div>
                 </div>
         </div>
     </div>
