--- a/menu.html
+++ b/menu.html
@@ -25,8 +25,8 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="order">
-                        <!-- <form>
-                            <div id="size">
+                        <form>
+                            <!-- <div id="size">
                                 <label for="pizzaSize">Select size</label>
                                 <select id="pizzaSize">
                                     <option label="Large -1700" value="1700"></option>
@@ -59,8 +59,8 @@
                             </div>
                             <div>
                                 <button type="button" id="button" onclick="placeOrder()" label="">ORDER</button>
-                            </div>    
-                        </form> -->
+                            </div>     -->
+                        </form>
                     </div>
                 </div>
         </div>
