Adding an id of size with select tag with options of pizza size

--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
                 <div class="col-md-4">
                     <div class="order">
                         <form>
-                            <!-- <div id="size">
+                            <div id="size">
                                 <label for="pizzaSize">Select size</label>
                                 <select id="pizzaSize">
                                     <option label="Large -1700" value="1700"></option>
@@ -34,7 +34,7 @@
                                     <option label="Small - 850" value="850"></option>
                                 </select>
                             </div>
-                            <div id="crust">
+                            <!-- <div id="crust">
                                 <label for="pizzaCrust">Slecet crust</label>
                                 <select id="pizzaCrust">
                                     <option label="Chicken - 900" value="900"></option>
