Adding an id of crust with select tag with options of pizza crust

--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
                                     <option label="Small - 850" value="850"></option>
                                 </select>
                             </div>
-                            <!-- <div id="crust">
+                            <div id="crust">
                                 <label for="pizzaCrust">Slecet crust</label>
                                 <select id="pizzaCrust">
                                     <option label="Chicken - 900" value="900"></option>
@@ -44,7 +44,7 @@
                                     <option label="Vegetables - 500" value="500"></option>
                                 </select>
                             </div>
-                            <div id="toppings">
+                            <!-- <div id="toppings">
                                 <label for="pizzaTopping">Select toppings</label>
                                 <select id="pizzaToppings">
                                     <option label="Tomatoes" value="100"></option>
