--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
                                     <option label="Vegetables - 500" value="500"></option>
                                 </select>
                             </div>
-                            <!-- <div id="toppings">
+                            <div id="toppings">
                                 <label for="pizzaTopping">Select toppings</label>
                                 <select id="pizzaToppings">
                                     <option label="Tomatoes" value="100"></option>
@@ -53,7 +53,7 @@
                                     <option label="Sausages" value="40"></option>
                                 </select>
                             </div>
-                            <div id="amnt">
+                            <!-- <div id="amnt">
                                 <label for="quantity">Quantity</label>
                                 <input id="quantity" type="number" value="1">
                             </div>
