--- a/menu.html
+++ b/menu.html
@@ -53,11 +53,11 @@
                                     <option label="Sausages" value="40"></option>
                                 </select>
                             </div>
-                            <!-- <div id="amnt">
+                            <div id="amnt">
                                 <label for="quantity">Quantity</label>
                                 <input id="quantity" type="number" value="1">
                             </div>
-                            <div>
+                            <!-- <div>
                                 <button type="button" id="button" onclick="placeOrder()" label="">ORDER</button>
                             </div>     -->
                         </form>
