Adding a button with an onclick function of placeOrder

--- a/menu.html
+++ b/menu.html
@@ -57,9 +57,9 @@
                                 <label for="quantity">Quantity</label>
                                 <input id="quantity" type="number" value="1">
                             </div>
-                            <!-- <div>
+                            <div>
                                 <button type="button" id="button" onclick="placeOrder()" label="">ORDER</button>
-                            </div>     -->
+                            </div>    
                         </form>
                     </div>
                 </div>
