--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
                 </div>
             </header>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-12" style="text-align: center;">
                     <div class="order">
                         <form>
                             <div id="size">
