--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container-fluid">
+        <br>
         <div class="container">
             <div class="logo">
                 <img src="./Images/pizza logo.png">
@@ -24,11 +25,15 @@
             </header>
             <br>
             <div class="row">
-                <div class="col-md-12" style="text-align: center;">
+                <div class="col-md-4">
+                    <h3>About Pizza-Peddlers</h3>
+
+                </div>
+                <div class="col-md-4" style="text-align: center;">
                     <div class="order">
                         <form>
                             <div id="size">
-                                <label for="pizzaSize">Select size</label>
+                                <label for="pizzaSize">Select desired size:</label>
                                 <select id="pizzaSize">
                                     <option label="Large -1700" value="1700"></option>
                                     <option label="Medium - 1200" value="1200"></option>
@@ -36,7 +41,7 @@
                                 </select>
                             </div>
                             <div id="crust">
-                                <label for="pizzaCrust">Slecet crust</label>
+                                <label for="pizzaCrust">Select desired crust:</label>
                                 <select id="pizzaCrust">
                                     <option label="Chicken - 900" value="900"></option>
                                     <option label="Beef - 800" value="800"></option>
@@ -46,7 +51,7 @@
                                 </select>
                             </div>
                             <div id="toppings">
-                                <label for="pizzaTopping">Select toppings</label>
+                                <label for="pizzaTopping">Select your toppings:</label>
                                 <select id="pizzaToppings">
                                     <option label="Tomatoes" value="100"></option>
                                     <option label="Pepperoni" value="80"></option>
@@ -56,8 +61,10 @@
                             </div>
                             <div id="amnt">
                                 <label for="quantity">Quantity</label>
+                                <br>
                                 <input id="quantity" type="number" value="1">
                             </div>
+                            <br>
                             <div>
                                 <button type="button" id="button" onclick="placeOrder()" label="">ORDER</button>
                             </div>    
