Adding pizza-peddlers' offers and a notice

--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
     <title>Order your pizza</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" id="menu-bg">
         <br>
         <div class="container">
             <div class="logo">
@@ -26,8 +26,20 @@
             <br>
             <div class="row">
                 <div class="col-md-4">
-                    <h3>About Pizza-Peddlers</h3>
-
+                    <h3>Pizza-Peddlers' Offers</h3>
+                    <ul>
+                        <li>Pizza tasting on 04/02/2020</li>
+                        <li>Free pizza to the first 5 people on Saturdays</li>
+                        <li>Free delivery on Thursdays</li>
+                        <li>Buy one get one free on Sundays</li>
+                    </ul>
+                    <p>Am sure you don't wanna miss.....</p>
+                    <br>
+                    <h3>Vacant! Vacant!</h3>
+                    <p>We are looking for anyone aged <strong>18-25</strong> who is willing to work from Monday to 
+                        Sunday in the afternoon as a <strong>waiter or a waitress</strong>. If you are willing please send
+                    us a <strong>message in the contacts page</strong> and we will get back to you immediately.<br>
+                <em>A big fat cheque is waiting for you.....</em></p>
                 </div>
                 <div class="col-md-4" style="text-align: center;">
                     <div class="order">
