changing the secong h3 in pizza-peddlers' offers to notice from vacant

--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
                     </ul>
                     <p>Am sure you don't wanna miss.....</p>
                     <br>
-                    <h3>Vacant! Vacant!</h3>
+                    <h3>NOTICE!!!</h3>
                     <p>We are looking for anyone aged <strong>18-25</strong> who is willing to work from Monday to 
                         Sunday in the afternoon as a <strong>waiter or a waitress</strong>. If you are willing please send
                     us a <strong>message in the contacts page</strong> and we will get back to you immediately.<br>
