--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
             </header>
             <br>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4" id="offers">
                     <h3>Pizza-Peddlers' Offers</h3>
                     <ul>
                         <li>Pizza tasting on 04/02/2020</li>
