Adding an image and an anchor

--- a/menu.html
+++ b/menu.html
@@ -83,6 +83,11 @@
                         </form>
                     </div>
                 </div>
+                <div class="col-md-4" id="types">
+                    <p>Want to know how to make home-made pizzas??</p>
+                    <img src="./Images/about3.jpg" width="350px" height="350px">
+                    <a href="#" target="_blank">WATCH</a>
+                </div>
         </div>
     </div>
     <script src="./js/main.js"></script>
