Adding a more id

--- a/menu.html
+++ b/menu.html
@@ -83,7 +83,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-md-4" id="types">
+                <div class="col-md-4" id="more">
                     <p>Want to know how to make home-made pizzas??</p>
                     <img src="./Images/about3.jpg" width="350px" height="350px">
                     <a href="#" target="_blank">WATCH</a>
