Adding a recipe id with how to make pizza recipe and an anchor

--- a/menu.html
+++ b/menu.html
@@ -83,10 +83,17 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-md-4" id="more">
-                    <p>Want to know how to make home-made pizzas??</p>
-                    <img src="./Images/about3.jpg" width="350px" height="350px">
-                    <a href="#" target="_blank">WATCH</a>
+                <div class="col-md-4" id="recipe">
+                    <p>Want a treat? — hot homemade pizza, with exactly the toppings you like.</p>
+                    <p>Ingredients</p>
+                    <ul>
+                        <li>2 teaspoons active dry yeast or instant yeast</li>
+                        <li><sup>7</sup>/<sub>8</sub> to 1 <sup>1</sup>/<sub>8</sub> cups (198g to 255g) lukewarm water*</li>
+                        <li>2 tablespoons (25g) olive oil</li>
+                        <li>3 cups (361g) King Arthur Unbleached All-Purpose Flour</li>
+                        <li>1 <sup>1</sup>/<sub>4</sub> teaspoons salt</li>
+                    </ul>
+                    <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.kingarthurflour.com%2Frecipes%2Fpizza-crust-recipe&psig=AOvVaw1Vc8VovB3YN7SAsJgor25x&ust=1583148475679000&source=images&cd=vfe&ved=0CA0QjhxqFwoTCKiGzO2V-ecCFQAAAAAdAAAAABAb">LEARN MORE</a>
                 </div>
         </div>
     </div>
