Changing the p in recipe id to h4

--- a/menu.html
+++ b/menu.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col-md-4" id="recipe">
                     <p>Want a treat? — hot homemade pizza, with exactly the toppings you like.</p>
-                    <p>Ingredients</p>
+                    <h4>Ingredients</h4>
                     <ul>
                         <li>2 teaspoons active dry yeast or instant yeast</li>
                         <li><sup>7</sup>/<sub>8</sub> to 1 <sup>1</sup>/<sub>8</sub> cups (198g to 255g) lukewarm water*</li>
