Adding an about-bg id and adding an about pizza-peddlers paragraph

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
                     <a href="contact.html">Contact</a>
                 </div>
             </header>
-            <!-- <div class="col-md-12">
+            <div class="col-md-12">
                 <h1>About Pizza-Peddlers</h1>
                 <p>Pizza-Peddlers was founded in 2018 by Joan Wamuyu Kinyua. It has been 2 years and currently
                     it is the biggest Pizza shop in Nairobi. It was first located in TRM Ground floor but later
@@ -45,7 +45,7 @@
                     We have many different offers in every week and that keeps our customers happy making them come
                     back for more.
                 </p>
-            </div> -->
+            </div>
         </div>
     </div>
 </body>
