Adding a col-md-6 class

--- a/about.html
+++ b/about.html
@@ -25,26 +25,31 @@
             </header>
             <div class="col-md-12">
                 <h1>About Pizza-Peddlers</h1>
-                <p>Pizza-Peddlers was founded in 2018 by Joan Wamuyu Kinyua. It has been 2 years and currently
-                    it is the biggest Pizza shop in Nairobi. It was first located in TRM Ground floor but later
-                    it branched to various towns around Nairobi. Last year it opened it's first branch in Kisumu
-                    and another branch will be opened soon in Mombasa city.
-                </p>
-                <p>Pizza-Peddlers has offered employment to more than 500 youths around Nairobi, Kisumu and now
-                    Mombasa. 
-                </p>
-                <p>Pizza-Peddlers is a pizza shop that is driven with the following values:
-                    <ul>
-                        <li>Proffessionalism</li>
-                        <li>Respect</li>
-                        <li>Humility</li>
-                        <li>Fun loving</li>
-                    </ul>
-                    <br>
-                    Everyone who has been to Pizza-Peddlers can testify how this pizza shop is a fun-loving zone.
-                    We have many different offers in every week and that keeps our customers happy making them come
-                    back for more.
-                </p>
+            </div>
+            <div class="row">
+                <div class="col-md-6" id="about">
+                    <p>Pizza-Peddlers was founded in 2018 by Joan Wamuyu Kinyua. It has been 2 years and currently
+                        it is the biggest Pizza shop in Nairobi. It was first located in TRM Ground floor but later
+                        it branched to various towns around Nairobi. Last year it opened it's first branch in Kisumu
+                        and another branch will be opened soon in Mombasa city.
+                    </p>
+                    <p>Pizza-Peddlers has offered employment to more than 500 youths around Nairobi, Kisumu and now
+                        Mombasa. 
+                    </p>
+                    <p>Pizza-Peddlers is a pizza shop that is driven with the following values:
+                        <ul>
+                            <li>Proffessionalism</li>
+                            <li>Respect</li>
+                            <li>Humility</li>
+                            <li>Fun loving</li>
+                        </ul>
+                        <br>
+                        Everyone who has been to Pizza-Peddlers can testify how this pizza shop is a fun-loving zone.
+                        We have many different offers in every week and that keeps our customers happy making them come
+                        back for more.
+                    </p>
+                
+                </div>
             </div>
         </div>
     </div>
