Adding another col-md-6 class with a branches id

--- a/about.html
+++ b/about.html
@@ -50,6 +50,21 @@
                     </p>
                 
                 </div>
+
+                <div class="col-md-6" id="branches">
+                    <h2>Branches of Pizza-Peddlers</h2>
+                    <ul>
+                        <li>Milele Mall, Ngong</li>
+                        <li>TRM - Ground floor</li>
+                        <li>Prestige Plaza Mall, Ngong rd</li>
+                        <li>Carrefour, Junction Ngong rd</li>
+                        <li>Garden City Mall - First floor</li>
+                        <li>The Mall, Westlands - First floor</li>
+                        <li>Yaya Center - Ground floor</li>
+                        <li>Pizza-Peddlers , Kisumu</li>
+                        <li>Pizza-Peddlers , Mombasa</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
