Adding an about-us id

--- a/about.html
+++ b/about.html
@@ -23,11 +23,9 @@
                     <a href="contact.html">Contact</a>
                 </div>
             </header>
-            <div class="col-md-12">
-                <h1>About Pizza-Peddlers</h1>
-            </div>
-            <div class="row">
+            <div class="row" id="about-us">
                 <div class="col-md-6" id="about">
+                    <h3>About Pizza-Peddlers</h3>
                     <p>Pizza-Peddlers was founded in 2018 by Joan Wamuyu Kinyua. It has been 2 years and currently
                         it is the biggest Pizza shop in Nairobi. It was first located in TRM Ground floor but later
                         it branched to various towns around Nairobi. Last year it opened it's first branch in Kisumu
@@ -43,16 +41,13 @@
                             <li>Humility</li>
                             <li>Fun loving</li>
                         </ul>
-                        <br>
                         Everyone who has been to Pizza-Peddlers can testify how this pizza shop is a fun-loving zone.
                         We have many different offers in every week and that keeps our customers happy making them come
                         back for more.
                     </p>
-                
                 </div>
-
-                <div class="col-md-6" id="branches">
-                    <h2>Branches of Pizza-Peddlers</h2>
+                <div class="col-md-5" id="branches">
+                    <h3>Branches of Pizza-Peddlers</h3>
                     <ul>
                         <li>Milele Mall, Ngong</li>
                         <li>TRM - Ground floor</li>
