--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <div class="topnav">
                     <a href="#">Home</a>
                     <a href="menu.html">Menu</a>
-                    <a href="#">About</a>
-                    <a href="#">Contact</a>
+                    <a href="about.html">About</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </header>
 
