--- a/menu.html
+++ b/menu.html
@@ -19,8 +19,8 @@
                 <div class="topnav">
                     <a href="index.html">Home</a>
                     <a href="#">Menu</a>
-                    <a href="#">About</a>
-                    <a href="#">Contact</a>
+                    <a href="about.html">About</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </header>
             <br>
